--- a/index.html
+++ b/index.html
@@ -2,43 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Killa Selling – Prodaja patika online</title>
+<title>Killa Selling – Prodaja patika</title>
 <link rel="icon" type="image/png" href="kila2.png">
-
-<!-- Google site verification -->
-<meta name="google-site-verification" content="lxaSKjCbV4jpx36P_QvDnKBLxTJ2KKGKi3c816m6PHk" />
-
-<!-- SEO meta tagovi -->
-<meta name="description" content="Killa Selling – prodaja patika online, preko 1000 modela različitih brendova. Poruči lako i brzo!">
-<meta name="keywords" content="patike, prodaja patika, Killa Selling, New Balance, Nike, Adidas, online shop">
-<meta name="author" content="Tvoje Ime">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- Google Fonts -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap">
 
 <style>
-body {
-  margin:0;
-  font-family:'Fugaz One', sans-serif;
-  background-color: lightskyblue;
-  text-align:center;
-}
+body { margin:0; font-family:'Fugaz One', sans-serif; background-color: lightskyblue; text-align:center; }
 h1 { font-size:50px; margin:20px 0; }
 
-/* POČETNA STRANICA */
-.shop-container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 20px;
-  padding: 20px;
-  justify-items: center;
-}
-.product {
-  background:white; border-radius:10px; padding:15px; width:220px;
-  text-align:center; box-shadow:0 4px 8px rgba(0,0,0,0.2);
-  cursor:pointer;
-}
+/* SHOP GRID */
+.shop-container { display:grid; grid-template-columns: repeat(5, 1fr); gap:20px; padding:20px; justify-items:center; }
+.product { background:white; border-radius:10px; padding:15px; width:220px; text-align:center; box-shadow:0 4px 8px rgba(0,0,0,0.2); cursor:pointer; }
 .product img { width:100%; height:auto; border-radius:10px; object-fit:cover; }
 .product button { margin-top:10px; padding:10px 20px; font-size:16px; border:none; border-radius:5px; background-color:orange; color:white; cursor:pointer; }
 .product button:hover { background-color:darkorange; }
@@ -50,13 +25,8 @@ h1 { font-size:50px; margin:20px 0; }
 @media (max-width: 400px) { .shop-container { grid-template-columns: 1fr; } }
 
 /* MODAL */
-.modal {
-  display:none; position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8);
-  justify-content:center; align-items:center;
-}
-.modal-content {
-  background:white; padding:20px; border-radius:10px; width:600px; max-width:95%; position:relative; text-align:center;
-}
+.modal { display:none; position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8); justify-content:center; align-items:center; }
+.modal-content { background:white; padding:20px; border-radius:10px; width:600px; max-width:95%; position:relative; text-align:center; }
 .modal-content img { width:80%; max-width:400px; border-radius:10px; margin-bottom:15px; box-shadow:0 4px 12px rgba(0,0,0,0.3); }
 .modal-content label, .modal-content select, .modal-content input { display:block; width:90%; margin:5px auto; box-sizing:border-box; }
 .modal-content button { width:50%; padding:10px; font-size:16px; border:none; border-radius:5px; background:orange; color:white; cursor:pointer; margin-top:10px; }
@@ -64,138 +34,134 @@ h1 { font-size:50px; margin:20px 0; }
 .close { position:absolute; top:10px; right:15px; font-size:25px; font-weight:bold; cursor:pointer; }
 
 /* FOOTER */
-footer {
-  background-color:black;
-  color:#ccc;
-  padding:15px;
-  margin-top:30px;
-  text-align:center;
-}
+footer { background-color:black; color:#ccc; padding:15px; margin-top:30px; text-align:center; }
 footer hr { border-color:#444; margin-bottom:10px; }
 footer a { color:#ccc; text-decoration:none; }
 </style>
 </head>
 <body>
 
-<h1>Killa Selling – Prodaja patika online</h1>
+<h1>Dobro došli na Killin sajt, na pravom ste mestu.</h1>
 
-<div class="shop-container" id="shop">
-  <!-- Dinamički proizvodi će se generisati ovde -->
+<div class="shop-container">
+  <!-- RUČNO DODATE PATIKE -->
+  <div class="product"><img src="9060.1.png" alt="Patika 1"><h3>Patika 1</h3><p>Cena: 100€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika2.png" alt="Patika 2"><h3>Patika 2</h3><p>Cena: 102€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika3.png" alt="Patika 3"><h3>Patika 3</h3><p>Cena: 104€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika4.png" alt="Patika 4"><h3>Patika 4</h3><p>Cena: 106€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika5.png" alt="Patika 5"><h3>Patika 5</h3><p>Cena: 108€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika6.png" alt="Patika 6"><h3>Patika 6</h3><p>Cena: 110€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="9060.1.png" alt="Patika 7"><h3>Patika 7</h3><p>Cena: 112€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika8.png" alt="Patika 8"><h3>Patika 8</h3><p>Cena: 114€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika9.png" alt="Patika 9"><h3>Patika 9</h3><p>Cena: 116€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika10.png" alt="Patika 10"><h3>Patika 10</h3><p>Cena: 118€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika11.png" alt="Patika 11"><h3>Patika 11</h3><p>Cena: 120€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="9060.1.png" alt="Patika 12"><h3>Patika 12</h3><p>Cena: 122€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika13.png" alt="Patika 13"><h3>Patika 13</h3><p>Cena: 124€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika14.png" alt="Patika 14"><h3>Patika 14</h3><p>Cena: 126€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika15.png" alt="Patika 15"><h3>Patika 15</h3><p>Cena: 128€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika16.png" alt="Patika 16"><h3>Patika 16</h3><p>Cena: 130€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="9060.1.png" alt="Patika 17"><h3>Patika 17</h3><p>Cena: 132€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika18.png" alt="Patika 18"><h3>Patika 18</h3><p>Cena: 134€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika19.png" alt="Patika 19"><h3>Patika 19</h3><p>Cena: 136€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika20.png" alt="Patika 20"><h3>Patika 20</h3><p>Cena: 138€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika21.png" alt="Patika 21"><h3>Patika 21</h3><p>Cena: 140€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="9060.1.png" alt="Patika 22"><h3>Patika 22</h3><p>Cena: 142€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika23.png" alt="Patika 23"><h3>Patika 23</h3><p>Cena: 144€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika24.png" alt="Patika 24"><h3>Patika 24</h3><p>Cena: 146€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika25.png" alt="Patika 25"><h3>Patika 25</h3><p>Cena: 148€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika26.png" alt="Patika 26"><h3>Patika 26</h3><p>Cena: 150€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="9060.1.png" alt="Patika 27"><h3>Patika 27</h3><p>Cena: 152€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika28.png" alt="Patika 28"><h3>Patika 28</h3><p>Cena: 154€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika29.png" alt="Patika 29"><h3>Patika 29</h3><p>Cena: 156€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="patika30.png" alt="Patika 30"><h3>Patika 30</h3><p>Cena: 158€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="9060.1.png" alt="Patika 31"><h3>Patika 31</h3><p>Cena: 160€</p><button onclick="openModal(this)">Poruči</button></div>
 </div>
 
-<!-- MODAL SA FORMOM ZA LIČNO PREUZIMANJE I DOSTAVU -->
+<!-- MODAL -->
 <div class="modal" id="modal">
   <div class="modal-content">
     <span class="close" onclick="closeModal()">&times;</span>
     <img id="modalImage" src="" alt="Patika">
     <h2 id="modalName">Ime patike</h2>
-    <form action="https://formspree.io/f/xwprkbad" method="POST" onsubmit="alert('Porudžbina poslata!'); closeModal();">
 
+    <label>Izaberite način preuzimanja:</label>
+    <select id="modalDelivery" onchange="toggleFields()">
+      <option value="">--Izaberi--</option>
+      <option value="pickup">Lično preuzimanje</option>
+      <option value="delivery">Dostava</option>
+    </select>
+
+    <!-- FORM PICKUP -->
+    <form id="pickupForm" action="https://formspree.io/f/xwprkbad" method="POST" style="display:none;" onsubmit="alert('Porudžbina poslata!'); closeModal();">
+      <input type="hidden" name="product" id="pickupProduct">
       <label>Broj patike:
         <select name="size">
-          <option value="35">35</option><option value="36">36</option><option value="37">37</option>
-          <option value="38">38</option><option value="39">39</option><option value="40">40</option>
-          <option value="41">41</option><option value="42">42</option><option value="43">43</option>
-          <option value="44">44</option><option value="45">45</option>
+          <option>35</option><option>36</option><option>37</option><option>38</option><option>39</option>
+          <option>40</option><option>41</option><option>42</option><option>43</option><option>44</option><option>45</option>
         </select>
       </label>
-
-      <label>Način preuzimanja:
-        <select id="modalDelivery" name="delivery" onchange="toggleFields()">
-          <option value="pickup">Lično preuzimanje</option>
-          <option value="delivery">Dostava</option>
+      <label>Ime i prezime:<input type="text" name="pickupName" required></label>
+      <label>Broj telefona:<input type="tel" name="pickupPhone" required></label>
+      <label>Lokacija preuzimanja:
+        <select name="pickupLocation">
+          <option>Bulevar Oslobođenja 84</option>
+          <option>Ignjata Joba 53</option>
         </select>
       </label>
+      <button type="submit">Pošalji</button>
+    </form>
 
-      <!-- Polja za lično preuzimanje -->
-      <div id="pickupFields">
-        <label>Ime i prezime:
-          <input type="text" name="pickupName" required>
-        </label>
-        <label>Broj telefona:
-          <input type="tel" name="pickupPhone" placeholder="0601234567" required>
-        </label>
-        <label>Lokacija preuzimanja:
-          <select name="pickupLocation">
-            <option value="Bulevar Oslobodjenja 84">Bulevar Oslobođenja 84</option>
-            <option value="Ignjata Joba 53">Ignjata Joba 53</option>
-          </select>
-        </label>
-      </div>
-
-      <!-- Polja za dostavu -->
-      <div id="deliveryFields" style="display:none;">
-        <label>Ime i prezime:
-          <input type="text" name="name" required>
-        </label>
-        <label>Broj telefona:
-          <input type="tel" name="phone" placeholder="0601234567" required>
-        </label>
-        <label>Ulica i broj:
-          <input type="text" name="address" required>
-        </label>
-        <label>Opština i poštanski broj:
-          <input type="text" name="postal" required>
-        </label>
-      </div>
-
+    <!-- FORM DELIVERY -->
+    <form id="deliveryForm" action="https://formspree.io/f/xwprkbad" method="POST" style="display:none;" onsubmit="alert('Porudžbina poslata!'); closeModal();">
+      <input type="hidden" name="product" id="deliveryProduct">
+      <label>Broj patike:
+        <select name="size">
+          <option>35</option><option>36</option><option>37</option><option>38</option><option>39</option>
+          <option>40</option><option>41</option><option>42</option><option>43</option><option>44</option><option>45</option>
+        </select>
+      </label>
+      <label>Ime i prezime:<input type="text" name="name" required></label>
+      <label>Broj telefona:<input type="tel" name="phone" required></label>
+      <label>Ulica i broj:<input type="text" name="address" required></label>
+      <label>Opština i poštanski broj:<input type="text" name="postal" required></label>
       <button type="submit">Pošalji</button>
     </form>
   </div>
 </div>
 
-<!-- FOOTER -->
 <footer>
   <hr>
-  <p>Pratite nas na Instagramu: 
-    <a href="https://www.instagram.com/tvojinstagram/" target="_blank">@tvojinstagram</a>
-  </p>
-  <p>Lokacije za lično preuzimanje: Bulevar Oslobođenja 84 | Ignjata Joba 53</p>
-  <p>Kontakt: putem Instagrama</p>
+  <p>Pratite nas na Instagramu: <a href="https://www.instagram.com/killa_selling/" target="_blank">@killa_selling</a></p>
+  <p>Lokacije za lično preuzimanje: Bulevar Oslobodjenja 84 | Ignjata Joba 53</p>
 </footer>
 
 <script>
-// Lista od 31 patike
-const products = [];
-for(let i=1;i<=31;i++){
-  products.push({
-    name:`Patika ${i}`,
-    img:`patika${i}.png`,
-    price: 100 + i*2 // primer cena
-  });
-}
+function openModal(button){
+  const productDiv = button.parentElement;
+  const imgSrc = productDiv.querySelector('img').src;
+  const name = productDiv.querySelector('h3').innerText;
 
-// Generisanje proizvoda u shop-container
-const shop = document.getElementById('shop');
-products.forEach(p => {
-  const div = document.createElement('div');
-  div.className = 'product';
-  div.innerHTML = `
-    <img src="${p.img}" alt="${p.name}">
-    <h3>${p.name}</h3>
-    <p>Cena: ${p.price}€</p>
-    <button onclick="openModal('${p.name}', '${p.img}')">Poruči</button>
-  `;
-  shop.appendChild(div);
-});
-
-function openModal(name, img){
   document.getElementById('modalName').innerText = name;
-  document.getElementById('modalImage').src = img;
+  document.getElementById('modalImage').src = imgSrc;
+  document.getElementById('pickupProduct').value = name;
+  document.getElementById('deliveryProduct').value = name;
+
   document.getElementById('modal').style.display = 'flex';
-  document.querySelector('#modal form').reset();
-  toggleFields(); // prikaz polja odmah
+  document.getElementById('modalDelivery').value = '';
+  toggleFields();
 }
 
 function closeModal(){
   document.getElementById('modal').style.display = 'none';
-  document.querySelector('#modal form').reset();
+  document.getElementById('pickupForm').style.display = 'none';
+  document.getElementById('deliveryForm').style.display = 'none';
 }
 
 function toggleFields(){
-  const delivery = document.getElementById('modalDelivery').value;
-  document.getElementById('pickupFields').style.display = delivery === 'pickup' ? 'block' : 'none';
-  document.getElementById('deliveryFields').style.display = delivery === 'delivery' ? 'block' : 'none';
+  const val = document.getElementById('modalDelivery').value;
+  document.getElementById('pickupForm').style.display = val==='pickup'?'block':'none';
+  document.getElementById('deliveryForm').style.display = val==='delivery'?'block':'none';
 }
 </script>
 
