--- a/index.html
+++ b/index.html
@@ -41,41 +41,42 @@ footer a { color:#ccc; text-decoration:none; }
 </head>
 <body>
 
-<h1>Dobro došli na Killin sajt, na pravom ste mestu.</h1>
+<h1>Dobro dosli na Killin sajt, na pravom ste mestu.</h1>
 
 <div class="shop-container">
   <!-- RUČNO DODATE PATIKE -->
-  <div class="product"><img src="9060.1.png" alt="Patika 1"><h3>Patika 1</h3><p>Cena: 100€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika2.png" alt="Patika 2"><h3>Patika 2</h3><p>Cena: 102€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika3.png" alt="Patika 3"><h3>Patika 3</h3><p>Cena: 104€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika4.png" alt="Patika 4"><h3>Patika 4</h3><p>Cena: 106€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika5.png" alt="Patika 5"><h3>Patika 5</h3><p>Cena: 108€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika6.png" alt="Patika 6"><h3>Patika 6</h3><p>Cena: 110€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="9060.1.png" alt="Patika 7"><h3>Patika 7</h3><p>Cena: 112€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika8.png" alt="Patika 8"><h3>Patika 8</h3><p>Cena: 114€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika9.png" alt="Patika 9"><h3>Patika 9</h3><p>Cena: 116€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika10.png" alt="Patika 10"><h3>Patika 10</h3><p>Cena: 118€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika11.png" alt="Patika 11"><h3>Patika 11</h3><p>Cena: 120€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="9060.1.png" alt="Patika 12"><h3>Patika 12</h3><p>Cena: 122€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika13.png" alt="Patika 13"><h3>Patika 13</h3><p>Cena: 124€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika14.png" alt="Patika 14"><h3>Patika 14</h3><p>Cena: 126€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika15.png" alt="Patika 15"><h3>Patika 15</h3><p>Cena: 128€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika16.png" alt="Patika 16"><h3>Patika 16</h3><p>Cena: 130€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="9060.1.png" alt="Patika 17"><h3>Patika 17</h3><p>Cena: 132€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika18.png" alt="Patika 18"><h3>Patika 18</h3><p>Cena: 134€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika19.png" alt="Patika 19"><h3>Patika 19</h3><p>Cena: 136€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika20.png" alt="Patika 20"><h3>Patika 20</h3><p>Cena: 138€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika21.png" alt="Patika 21"><h3>Patika 21</h3><p>Cena: 140€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="9060.1.png" alt="Patika 22"><h3>Patika 22</h3><p>Cena: 142€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika23.png" alt="Patika 23"><h3>Patika 23</h3><p>Cena: 144€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika24.png" alt="Patika 24"><h3>Patika 24</h3><p>Cena: 146€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika25.png" alt="Patika 25"><h3>Patika 25</h3><p>Cena: 148€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika26.png" alt="Patika 26"><h3>Patika 26</h3><p>Cena: 150€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="9060.1.png" alt="Patika 27"><h3>Patika 27</h3><p>Cena: 152€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika28.png" alt="Patika 28"><h3>Patika 28</h3><p>Cena: 154€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika29.png" alt="Patika 29"><h3>Patika 29</h3><p>Cena: 156€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="patika30.png" alt="Patika 30"><h3>Patika 30</h3><p>Cena: 158€</p><button onclick="openModal(this)">Poruči</button></div>
-  <div class="product"><img src="9060.1.png" alt="Patika 31"><h3>Patika 31</h3><p>Cena: 160€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="9060 crne.png" alt="Patika 1"><h3>New Balance 9060 crne</h3><p>Cena: 100€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="bele.png" alt="Patika 2"><h3>New Balance 9060 bele</h3><p>Cena: 102€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="STEVINE.png" alt="Patika 3"><h3>New Balance 9060 krem</h3><p>Cena: 104€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="PLAVE.jpg" alt="Patika 4"><h3>New Balance 9060 plave</h3><p>Cena: 106€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="BROVN.png" alt="Patika 5"><h3>New Balance 9060 braon</h3><p>Cena: 108€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="crne.png" alt="Patika 6"><h3>Nike Air Max TN triple black</h3><p>Cena: 110€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="zuto plave.png" alt="Patika 7"><h3>Nike Air Max TN zuto-plave</h3><p>Cena: 112€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="sunshine tn.png" alt="Patika 8"><h3>Nike Air Max TN sunshine</h3><p>Cena: 114€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="sivom plave.png" alt="Patika 9"><h3>Nike Air Max TN sive</h3><p>Cena: 116€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="paris.png" alt="Patika 10"><h3>Nike Air Max TN PSG</h3><p>Cena: 118€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="ocean.png" alt="Patika 11"><h3>Nike Air Max TN Ocean</h3><p>Cena: 120€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="white.png" alt="Patika 12"><h3>Nike Air Max TN Triple White</h3><p>Cena: 122€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="tn barcelona.png" alt="Patika 13"><h3>Nike Air Max TN Barcelona</h3><p>Cena: 124€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="ljubicaste.png" alt="Patika 14"><h3>Nike Air Max TN Ljubicaste</h3><p>Cena: 126€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="lacoste.png" alt="Patika 15"><h3>Nike Air Max TN Lacoste</h3><p>Cena: 128€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="crno sive.jpg" alt="Patika 16"><h3>Nike Air Max TN crno-sive</h3><p>Cena: 130€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="beloplave.png" alt="Patika 17"><h3>Nike Air Max TN belo-plave</h3><p>Cena: 132€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="white-oreo.png.jpg" alt="Patika 18"><h3>Jordan Nike Air 4 retro white-oreo</h3><p>Cena: 134€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="Retro_MilitaryBlack_.webp" alt="Patika 19"><h3>Jordan Nike Air 4 retro military black</h3><p>Cena: 136€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="metallic-red.png" alt="Patika 20"><h3>Jordan Nike Air 4 retro metallic red</h3><p>Cena: 138€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="balenciaga black.png" alt="Patika 21"><h3>Balenciaga Track Crne</h3><p>Cena: 140€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="balenciaga white.png" alt="Patika 22"><h3>Balenciaga Track Bele</h3><p>Cena: 142€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="bez.webp" alt="Patika 23"><h3>Premiata Bez</h3><p>Cena: 144€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="braon.jpg" alt="Patika 24"><h3>Premiata Braon</h3><p>Cena: 146€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="kozne crne.jpg" alt="Patika 25"><h3>Premiata Crna</h3><p>Cena: 148€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="plave.webp" alt="Patika 26"><h3>Premiata Plave</h3><p>Cena: 150€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="narandzaste.jpg" alt="Patika 27"><h3>Premiara Belo-Naradzasta</h3><p>Cena: 152€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="carbon.png" alt="Patika 28"><h3>Adidas Yeezy Boost 350 Carbon</h3><p>Cena: 154€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="SIVE.jpg" alt="Patika 29"><h3>Adidas Yeezy Boost 350 Sive</h3><p>Cena: 156€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="belo crne.png" alt="Patika 30"><h3>Adidas Yeezy Boost 350 Zebra</h3><p>Cena: 158€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="bele yeezy.png" alt="Patika 31"><h3>Adidas Yeezy Boost 350 Bele</h3><p>Cena: 160€</p><button onclick="openModal(this)">Poruči</button></div>
+  <div class="product"><img src="crne yeezy.png" alt="Patika 32"><h3>Adidas Yeezy Boost 350 Crne</h3><p>Cena: 160€</p><button onclick="openModal(this)">Poruči</button></div>
 </div>
 
 <!-- MODAL -->
@@ -85,10 +86,10 @@ footer a { color:#ccc; text-decoration:none; }
     <img id="modalImage" src="" alt="Patika">
     <h2 id="modalName">Ime patike</h2>
 
-    <label>Izaberite način preuzimanja:</label>
+    <label>Izaberite nacin preuzimanja:</label>
     <select id="modalDelivery" onchange="toggleFields()">
       <option value="">--Izaberi--</option>
-      <option value="pickup">Lično preuzimanje</option>
+      <option value="pickup">Licno preuzimanje</option>
       <option value="delivery">Dostava</option>
     </select>
 
@@ -124,7 +125,7 @@ footer a { color:#ccc; text-decoration:none; }
       <label>Ime i prezime:<input type="text" name="name" required></label>
       <label>Broj telefona:<input type="tel" name="phone" required></label>
       <label>Ulica i broj:<input type="text" name="address" required></label>
-      <label>Opština i poštanski broj:<input type="text" name="postal" required></label>
+      <label>Opstina i postanski broj:<input type="text" name="postal" required></label>
       <button type="submit">Pošalji</button>
     </form>
   </div>
@@ -133,7 +134,7 @@ footer a { color:#ccc; text-decoration:none; }
 <footer>
   <hr>
   <p>Pratite nas na Instagramu: <a href="https://www.instagram.com/killa_selling/" target="_blank">@killa_selling</a></p>
-  <p>Lokacije za lično preuzimanje: Bulevar Oslobodjenja 84 | Ignjata Joba 53</p>
+  <p>Lokacije za licno preuzimanje: Bulevar Oslobodjenja 84 | Ignjata Joba 53</p>
 </footer>
 
 <script>
